# phat-contract-starter

./: .gitignore
erc20-497c0f607b393edb86f8da1bf053fb06/: Cargo.toml
erc20/src/: lib.rs
log_server-a00c26e4ff2173713db9afca5a82aee3/e2e/src/: e2e.js
