[package]
name = "erc20"
version = "0.1.2"
authors = ["anonymous"]
edition = "2021"

[dependencies]
ink_prelude = { version = "3", default-features = false }
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

pink-extension = { version = "0.1.17", default-features = false }
pink-utils = { version = "0.1", default-features = false }
aes-gcm = { version = "0.9.4" }
#rsa = { version = "0.6.1", default-features = true }
#rand = "0.8"
base64 = { version = "0.13.0", default-features = false, features =["alloc"] }

[dev-dependencies]
pink-extension-runtime = "0.1.3"

[lib]
name = "erc20"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
]
ink-as-dependency = []
